syntax = "proto3";
package me.mantou.common;

option java_package = "me.mantou.common";
option java_outer_classname = "CommonProto";
option java_multiple_files = true;

message User{
  string username = 1;
}